<resources>
    <string name="app_name">Movie Star</string>
    <string name="title_home">Film</string>
    <string name="title_dashboard">Social</string>
    <string name="title_profilo">Profilo</string>
    <string name="error_missing_credentials">Errore, compilare i campi richiesti!</string>
    <string name="error_missing_username">Errore, inserire un nome utente!</string>
    <string name="error_missing_password">Errore, inserire un password!</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="richiesta_text">Vuoi aggiungere questo utente ai tuoi amici?</string>
    <string name="cerca_utente_text">Cerca un utente…</string>
    <string name="titolo_film">TITOLO FILM</string>
    <string name="inserisci_il_commento">Inserisci il commento</string>
    <string name="aggiungi_commento">Aggiungi Commento</string>
    <string name="inserisci_la_tua_nuova_password">Inserisci la tua nuova password</string>
    <string name="la_lunghezza_minima_della_password_di_6_caratteri">La lunghezza minima della password è di 6 caratteri</string>
    <string name="username_tv">Username</string>
    <string name="elimina">elimina</string>
    <string name="testo_commento">Testo Commento</string>
    <string name="nome_visualizzato">Nome visualizzato</string>
    <string name="password">Password</string>
    <string name="visualizza_e_condividi_il_tuo_id_utente">Visualizza e condividi il tuo id utente</string>
    <string name="cambia_password">cambia password</string>
    <string name="trama">Trama</string>
    <string name="voto_medio">Voto Medio</string>
    <string name="rimuovi_dalla_lista_dei_film_da_vedere">Rimuovi dalla lista dei film da vedere</string>
    <string name="aggiungi_alla_lista_dei_film_preferiti">Aggiungi alla lista dei film preferiti</string>
    <string name="aggiungi_alla_lista_dei_film_visti">Aggiungi alla lista dei film visti</string>
    <string name="leggi_commenti">leggi commenti</string>
    <string name="rimuovi_alla_lista_dei_film_visti">Rimuovi alla lista dei film visti</string>
    <string name="rimuovi_dalla_lista_dei_film_preferiti">Rimuovi dalla lista dei film preferiti</string>
    <string name="forgot_password">Inserisci il tuo indirizzo email e clicca sul pulsante per ricevere il codice via mail e reimpostare la password</string>
    <string name="inserisci_la_tua_email">Inserisci la tua email</string>
    <string name="invia_nuovo_link_via_email">Invia nuovo link via email</string>
    <string name="accedi_ora">accedi ora</string>
    <string name="cerca_un_film">Cerca un film…</string>
    <string name="visualizza_elenco_amici">visualizza elenco amici</string>
    <string name="visualizza_lista_film_visti">visualizza lista film visti</string>
    <string name="visualizza_lista_film_da_vedere">visualizza lista film da vedere</string>
    <string name="visualizza_lista_film_preferiti">visualizza lista film preferiti</string>
    <string name="email">Email</string>
    <string name="registrati">Registrati</string>
    <string name="password_dimenticata_clicca_qui_per_ripristinarla">Password dimenticata? Clicca qui per ripristinarla</string>
    <string name="aggiungi_alla_lista_dei_film_da_vedere">Aggiungi alla lista dei film da vedere</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="nome_utente">Username(non modificabile)</string>
    <string name="email_da_verificare">Email (da verificare)</string>
    <string name="disclaimer">Cliccando su REGISTRATI accetti i Termini e le Condizioni d\'uso di Movie Star</string>
    <string name="deve_contenere_almeno_4_caratteri">Deve contenere almeno 4 caratteri</string>
    <string name="deve_contenere_almeno_6_caratteri">Deve contenere almeno 6 caratteri</string>
    <string name="accedi">Accedi</string>
    <string name="termini">\Registrandoti accetti i Termini e Condizioni di Movie Star. Se hai domande a riguardo non esitare a contattare ingsw2021@gmail.com.\</string>
    <string name="la_verifica_avviene_tramite_email_usa_l_apposito_pulsante_se_il_link_ricevuto_scaduto">La verifica avviene tramite email, usa l\'apposito pulsante se il link ricevuto è scaduto.</string>
    <string name="richiedi_nuovo_codice">Richiedi nuovo codice</string>
    <string name="hai_dimenticato_la_password_reimpostala_ora">Hai dimenticato la password? Reimpostala ora</string>
    <string name="ecco_il_tuo_id_utente">Ecco il tuo ID utente</string>
    <string name="share">SHARE</string>
    <string name="le_due_password_devono_corrispondere">Le due password devono corrispondere</string>
    <string name="conferma_la_tua_nuova_password">Conferma la tua nuova password</string>
    <string name="hai_gi_un_account_clicca_qui_per_accedere">Hai già un account? Clicca qui per accedere</string>
    <string name="lista_amici">Lista Amici</string>
    <string name="profilo">Profilo</string>
    <string name="inserisci_qui_il_tuo_commento">Inserisci qui il tuo commento...</string>
    <string name="immagine_profilo">Immagine profilo</string>
    <string name="elimina_amico">Elimina amico</string>
    <string name="copertina_film">Copertina film</string>
    <string name="stellina_voto_3">Stellina voto 3</string>
    <string name="stellina_voto_1">Stellina voto 1</string>
    <string name="stellina_voto_2">Stellina voto 2</string>
    <string name="stellina_voto_4">Stellina voto 4</string>
    <string name="stellina_voto_5">Stellina voto 5</string>
    <string name="invia_ricerca">Invia ricerca</string>
    <string name="edit_profilo">Edit profilo</string>
    <string name="apri_lista_amici">Apri lista amici</string>
    <string name="invia_ricerca_tra_utenti">Invia ricerca tra utenti</string>
    <string name="logo_applicazione">Logo applicazione</string>
    <string name="avatar_utente">Avatar utente</string>
    <string name="elimina_richiesta">Elimina richiesta</string>
    <string name="accetta_richiesta">Accetta richiesta</string>
</resources>